src/objects/Prosth_Exam_Form__c.object
<CustomObject>
    <fields>
        <fullName>AO4_Bone_Reduction_Max__c</fullName>
        <label>AO4 Bone Reduction Max</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AO4_bone_Reduction_Mand__c</fullName>
        <label>AO4 bone Reduction Mand</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abrasion_Location__c</fullName>
        <label>Abrasion Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generalized</fullName>
                </value>
                <value>
                    <fullName>Localized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Abrasion_Severity__c</fullName>
        <label>Abrasion Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mild</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Severe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prosth Exam Forms</relationshipLabel>
        <relationshipName>Prosth_Exam_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>At_Rest__c</fullName>
        <label>At Rest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Deficient</fullName>
                </value>
                <value>
                    <fullName>Excessive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attrition_Location__c</fullName>
        <label>Attrition Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generalized</fullName>
                </value>
                <value>
                    <fullName>Localized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attrition_Severity__c</fullName>
        <label>Attrition Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mild</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Severe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMI_Calc__c</fullName>
        <formula>( Weight__c * 0.45) / (( Height_Total_Inches__c * 0.025) * (Height_Total_Inches__c * 0.025))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMI Calc</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMI__c</fullName>
        <label>BMI</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_Diastolic__c</fullName>
        <label>BP Diastolic</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_Systolic__c</fullName>
        <label>BP Systolic</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bone_Loss_Area__c</fullName>
        <label>Bone Loss Area</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bone_Loss_Notes__c</fullName>
        <label>Bone Loss Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bone_Loss_Percent__c</fullName>
        <label>Bone Loss Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bone_Loss__c</fullName>
        <label>Bone Loss</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Isolated</fullName>
                </value>
                <value>
                    <fullName>Generalized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Centric_Relation_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Centric Relation Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chief_Complaint__c</fullName>
        <label>Chief Complaint</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Clinical_Apt_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Apt Calendar</label>
        <referenceTo>Clinical_Apt_Calendar__c</referenceTo>
        <relationshipLabel>Prosth Exam Forms</relationshipLabel>
        <relationshipName>Prosth_Exam_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Note_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Note Instance</label>
        <referenceTo>Clinical_Note_Instance__c</referenceTo>
        <relationshipLabel>Prosth Exam Forms</relationshipLabel>
        <relationshipName>Prosth_Exam_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Complement</fullName>
                </value>
                <value>
                    <fullName>Partially Edentulous</fullName>
                </value>
                <value>
                    <fullName>Edentulous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crepitus__c</fullName>
        <label>Crepitus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Left</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
                <value>
                    <fullName>Left and Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dentofacial_Mand_Amount__c</fullName>
        <label>Dentofacial Mand Amount</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dentofacial_Mand_Direction__c</fullName>
        <label>Dentofacial Mand Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Right</fullName>
                </value>
                <value>
                    <fullName>Left</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dentofacial_Max_Amount__c</fullName>
        <label>Dentofacial Max Amount</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dentofacial_Max_Direction__c</fullName>
        <label>Dentofacial Max Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Right</fullName>
                </value>
                <value>
                    <fullName>Left</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dentofacial_WNL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dentofacial WNL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deviations__c</fullName>
        <label>Deviations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dry_Mouth__c</fullName>
        <label>Dry Mouth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Erosion_Location__c</fullName>
        <label>Erosion Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generalized</fullName>
                </value>
                <value>
                    <fullName>Localized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Erosion_Severity__c</fullName>
        <label>Erosion Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mild</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Severe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evidence_of_Bruxism__c</fullName>
        <label>Evidence of Bruxism</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Pros_Max__c</fullName>
        <label>Existing Pros Max</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WNL</fullName>
                </value>
                <value>
                    <fullName>Ill Fitting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Prosth_Mand_Type__c</fullName>
        <label>Existing Prosth Mand Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full denture</fullName>
                </value>
                <value>
                    <fullName>Metal based partial denture</fullName>
                </value>
                <value>
                    <fullName>Partial denture</fullName>
                </value>
                <value>
                    <fullName>Snap on denture</fullName>
                </value>
                <value>
                    <fullName>Implant Supported Acrylic</fullName>
                </value>
                <value>
                    <fullName>Implant Supported Zirconia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Prosth_Mand__c</fullName>
        <label>Existing Prosth Mand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WNL</fullName>
                </value>
                <value>
                    <fullName>Ill Fitting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Prosth_Max_Type__c</fullName>
        <label>Existing Prosth Max Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full denture</fullName>
                </value>
                <value>
                    <fullName>Metal based partial denture</fullName>
                </value>
                <value>
                    <fullName>Partial denture</fullName>
                </value>
                <value>
                    <fullName>Snap on denture</fullName>
                </value>
                <value>
                    <fullName>Implant Supported Acrylic</fullName>
                </value>
                <value>
                    <fullName>Implant Supported Zirconia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Prosth_Notes__c</fullName>
        <label>Existing Prosth Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FMX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FMX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facebow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facebow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hard_Soft_Mand_RRR__c</fullName>
        <label>Hard Soft Mand RRR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Slight</fullName>
                </value>
                <value>
                    <fullName>Mod</fullName>
                </value>
                <value>
                    <fullName>Severe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hard_Soft_Max_RRR__c</fullName>
        <label>Hard Soft Max RRR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Slight</fullName>
                </value>
                <value>
                    <fullName>Mod</fullName>
                </value>
                <value>
                    <fullName>Severe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hard_Soft_RRR__c</fullName>
        <label>Hard Soft RRR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Slight</fullName>
                </value>
                <value>
                    <fullName>Mod</fullName>
                </value>
                <value>
                    <fullName>Severe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hard_Soft_WNL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hard Soft WNL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Height_Feet__c</fullName>
        <label>Height Feet</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Height_Inches__c</fullName>
        <label>Height Inches</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Height_Total_Inches__c</fullName>
        <formula>( Height_Feet__c * 12) +  Height_Inches__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Height Total Inches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_long_missing_teeth__c</fullName>
        <label>How long missing teeth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;1 year</fullName>
                </value>
                <value>
                    <fullName>1-5 years</fullName>
                </value>
                <value>
                    <fullName>5-10 years</fullName>
                </value>
                <value>
                    <fullName>10-15 years</fullName>
                </value>
                <value>
                    <fullName>&gt;15 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image_Notes__c</fullName>
        <label>Image Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Impressions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impressions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Motion__c</fullName>
        <label>In Motion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Deficient</fullName>
                </value>
                <value>
                    <fullName>Excessive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L_Upon_Closing_ROM__c</fullName>
        <label>L Upon Closing ROM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WNL</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Deviated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L_Upon_Opening_ROM__c</fullName>
        <label>L Upon Opening ROM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WNL</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Deviated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lip_Fullness__c</fullName>
        <label>Lip Fullness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Thin</fullName>
                </value>
                <value>
                    <fullName>Thick</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lip_Length__c</fullName>
        <label>Lip Length</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Short</fullName>
                </value>
                <value>
                    <fullName>Long</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobility_Notes__c</fullName>
        <label>Mobility Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mobility__c</fullName>
        <label>Mobility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Muscles_of_mastication_WNL__c</fullName>
        <label>Muscles of mastication WNL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCS_Asymmetry_Location__c</fullName>
        <label>OCS Asymmetry Location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCS_Asymmetry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OCS Asymmetry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCS_Lymph_Location__c</fullName>
        <label>OCS Lymph Location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCS_Lymph__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OCS Lymph</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCS_Neg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OCS Neg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCS_Other_Text__c</fullName>
        <label>OCS Other Text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCS_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OCS Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCS_Pos__c</fullName>
        <label>OCS Pos</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCS_Swelling_Location__c</fullName>
        <label>OCS Swelling Location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCS_Swelling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OCS Swelling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Occlusion_Attrition__c</fullName>
        <label>Occlusion Attrition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mild</fullName>
                </value>
                <value>
                    <fullName>Mod</fullName>
                </value>
                <value>
                    <fullName>Severe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occlusion_Dental__c</fullName>
        <label>Occlusion Dental</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occlusion_Hyper_Eruption__c</fullName>
        <label>Occlusion Hyper Eruption</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occlusion_OB__c</fullName>
        <label>Occlusion OB</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occlusion_OJ__c</fullName>
        <label>Occlusion OJ</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occlusion_Plane__c</fullName>
        <label>Occlusion Plane</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WNL</fullName>
                </value>
                <value>
                    <fullName>Bi-Plane</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occlusion_Skeletal__c</fullName>
        <label>Occlusion Skeletal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Panorex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Panorex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Perio_Chart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Perio Chart</label>
        <referenceTo>Perio_Chart__c</referenceTo>
        <relationshipLabel>Prosth Exam Forms</relationshipLabel>
        <relationshipName>Prosth_Exam_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Periodontal_Type__c</fullName>
        <label>Periodontal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Photographs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Photographs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physiological_Location__c</fullName>
        <label>Physiological Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generalized</fullName>
                </value>
                <value>
                    <fullName>Localized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physiological_Severity__c</fullName>
        <label>Physiological Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mild</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Severity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pulse_Ox__c</fullName>
        <label>Pulse Ox</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pulse__c</fullName>
        <label>Pulse</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Upon_Closing_ROM__c</fullName>
        <label>R Upon Closing ROM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WNL</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Deviated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>R_Upon_Opening_ROM__c</fullName>
        <label>R Upon Opening ROM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WNL</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Deviated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Radiology_Other__c</fullName>
        <label>Radiology Other</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radiology_WNL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Radiology WNL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Range_of_Motion__c</fullName>
        <label>Range of Motion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>45mm+</fullName>
                </value>
                <value>
                    <fullName>45mm-30mm</fullName>
                </value>
                <value>
                    <fullName>&lt;30mm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recession_Notes__c</fullName>
        <label>Recession Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recession__c</fullName>
        <label>Recession</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Physiological</fullName>
                </value>
                <value>
                    <fullName>Pathological</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Records_Notes__c</fullName>
        <label>Records Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reported_Bruxism__c</fullName>
        <label>Reported Bruxism</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Restorative_Prognosis__c</fullName>
        <label>Restorative Prognosis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Guarded</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Irredeemable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salivary_Other__c</fullName>
        <label>Salivary Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Smile_Line_Notes__c</fullName>
        <label>Smile Line Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Smile_Line__c</fullName>
        <label>Smile Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Surgical_Reduction_Notes__c</fullName>
        <label>Surgical Reduction Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TMJ_Notes__c</fullName>
        <label>TMJ Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TMJ_max_opening__c</fullName>
        <label>TMJ max opening</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMJ_pop_click_left__c</fullName>
        <label>TMJ_pop_click_left</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asymp</fullName>
                </value>
                <value>
                    <fullName>Symp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TMJ_pop_click_right__c</fullName>
        <label>TMJ_pop_click_right</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asymp</fullName>
                </value>
                <value>
                    <fullName>Symp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TMJ_stable_wnl__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TMJ_stable_wnl</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>